profile Page overflow fixed

--- a/src/Pages/Private/Profile/style/css.css
+++ b/src/Pages/Private/Profile/style/css.css
@@ -7,19 +7,32 @@
 }
 
 .profile-data {
-    position: absolute;
-    left: 0;
-    margin: 10px;
-    border: 2px solid black;
-    border-radius: 10px;
-    font-style: italic;
-    color: white;
-    background-color: #181818;
+    display: none;
 }
 
 .profile-palette {
     display: grid;
-    max-width: 100vw;
-    grid-template-columns: repeat(5, 100px);
+    max-width: 100%;
+    grid-template-columns: repeat(4, 100px);
     grid-auto-rows: 100px;
+}
+
+@media (min-width: 720px) {
+    .profile-palette {
+        display: grid;
+        max-width: 100%;
+        grid-template-columns: repeat(10, 100px);
+        grid-auto-rows: 100px;
+    }
+
+    .profile-data {
+        position: absolute;
+        left: 0;
+        margin: 10px;
+        border: 2px solid black;
+        border-radius: 10px;
+        font-style: italic;
+        color: white;
+        background-color: #181818;
+    }
 }
