--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,8 @@
 }
 :root {
   font-size: 16px;
-  min-width: 100vw;
-  min-height: 100vh;
+  min-width: 100%;
+  min-height: 100%;
   background: linear-gradient(-45deg, #fff, #000, #23a6d5, #23d5ab);
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
